# meta-trader

./: .env.example  .gitignore  README.md  backtest_log.txt  check_models.py  check_moonshot.py  check_sector_vol.py  config.ini  pyproject.toml  pytest_output.txt  pytest_results.txt  requirements.txt  results.txt  run.py  run_output.txt  run_results.txt  run_state.json  test_openrouter.py
docs/: HARD_RULES.md  architecture.md  epic_11_verification.md  failed_experiments.md  memory.md  prd.md  project_brief.md  tasks.md  typing_guide.md
logs/: llm_audit.jsonl
praxis_engine/: __init__.py  config.ini  main.py  utils.py
results/: HDFCBANK.NS_run_state.json  RELIANCE.NS_run_state.json  TCS.NS_run_state.json  backtest_summary.md  backtest_summary_913786b.md  backtest_summary_baseline.md  opportunities_2025-08-26.md  regime_model.joblib  results.txt  sensitivity_analysis_discoveries.md  sensitivity_analysis_report.md  sensitivity_analysis_report_baseline.md
scripts/: analyze_drawdown.py  audit_opportunities.py  temp_sensitivity_runner.py  train_regime_model.py  universe_analyzer.py
self_improving_quant/: main.py
src/: main.py  orchestrator.py
tests/: conftest.py  test_backtester.py  test_config_service.py  test_data_service.py  test_diagnostics_service.py  test_execution_simulator.py  test_features.py  test_guards.py  test_indicators.py  test_llm_audit_service.py  test_llm_optional.py  test_llm_service.py  test_logger.py  test_market_data_service.py  test_orchestrator.py  test_orchestrator_analysis.py  test_prompt.txt  test_regime_model_service.py  test_scripts.py  (+11 more)
(+66 files in other folders)
