[tool.poetry]
name = "praxis-engine"
version = "0.1.0"
description = "A quantitative trading system for the Indian stock market."
authors = ["Jules <agent@example.com>"]
packages = [{include = "praxis_engine"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
statsmodels = "^0.14.0"
yfinance = "^0.2.28"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
configparser = "^6.0.0"
typer = {extras = ["rich"], version = "^0.9.0"}
pytest = "^7.4.0"
mypy = "^1.5.1"
ollama = "^0.1.7"
openai = "^1.0.0"
jinja2 = "^3.1.2"
hurst = "^0.0.5"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[tool.poetry.scripts]
praxis = "praxis_engine.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
strict = true
